升级安卓工程为最新版本

--- a/AnnZone-Android/app/src/main/res/values/colors.xml
+++ b/AnnZone-Android/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="colorGrayDark">#eaecec</color>
     <color name="colorAlpha">#00000000</color>
     <color name="colorBlank">#EEF5FF</color>
+
+    <color name="white">#ffffff</color>
 </resources>
