--- a/AnnZone-Android/app/src/main/res/layout/fragment_discover.xml
+++ b/AnnZone-Android/app/src/main/res/layout/fragment_discover.xml
@@ -48,6 +48,8 @@
                     android:hint="@string/search_hint"
                     android:imeOptions="actionSearch"
                     android:textColor="@color/white"
+                    android:singleLine="true"
+                    android:maxLines="1"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
