--- a/AnnZone-Android/app/src/main/res/layout/fragment_publish.xml
+++ b/AnnZone-Android/app/src/main/res/layout/fragment_publish.xml
@@ -24,7 +24,8 @@
                 android:layout_width="104.0dip"
                 android:layout_height="104.0dip"
                 android:layout_centerInParent="true"
-                android:background="@drawable/logo" />
+                android:adjustViewBounds="true"
+                android:src="@drawable/logo" />
 
             <ImageView
                 android:layout_width="116.0dip"
